--- a/races/peoples.html
+++ b/races/peoples.html
@@ -105,6 +105,7 @@
 <p><a href="../races/taur.html">Tauric Folk</a> - Humans cast out from the rest of their species due to the extent of the curse placed on their ancestors. Founders of the Dalandic Empire, Eyom's fastest growing nation and owner of the international railway.</p>
 
 <h5 class="articlesubtitle"><strong><em>Minor Eyomic Peoples</em></strong></h5>
+<p><a href="../races/dragonette.html">Dragonette</a> - A species of True Dragons known for their small statures, dosmestic desires, steppy leggy dance... And being exactly like normal dragons in behavior despite this.
 <p><a href="../races/elves.html">Jîve Elves</a> - A somewhat uncommon elven subspecies who are refreshingly human.</p>
 <p><a href="../races/kivu.html">Kivu</a> - Myschevious species of qazi-corporal humanoids native to nowhere who have ghost-like powers.</p>
 <p><a href="../races/kobold.html">Kobolds</a> - Small reptilian cratures with a love of trees, mining, and adventure.</p>
