--- a/gamerules/magicasequipment.html
+++ b/gamerules/magicasequipment.html
@@ -134,10 +134,11 @@
 <p>Totem Arcana is the main form of Magic in Eyom. It is a form of magic as equipment and is available to everyone who can afford to purchase a totem and a talisman. It is important to note that each individual spell a PC whiches to cast using the energy from their totem will require its own individual talisman. All prepared caster classes begin play with a totem of no more than 2300 GP, and a number of talismans equal to that of the number of spells they would know under the normal Pathfinder magic system.</p>
 <h5 class="articlesubtitle"><span id="Material_Plane">Totems</span></h5>
 <p>Totems are arcane machines that collect, store, and distribute magical energy in a raw state. They are functionally replacing a creature's natural mana pool.</p>
-<p>Each totem has three parts, a collector, a reservoir, and an antenna. The collector determines how quickly the totem absorbs energy, the reservoir determines how much energy the totem can hold, and the antenna determines how far it can transmit that energy. When a talisman linked to a totem is activated, it draws a number of spell levels from the totem equal to the spell's level (plus any spell levels needed for meta magic feats). Note: Cantrips, being 0th level, do not deplete any appreciable amount of energy from a totem. The totem will eventually replenish its energy on its own based on its specific collector.</p>
+<p>Each totem has three parts, a collector, a reservoir, and an antenna. The collector determines how quickly the totem absorbs energy within a Populious Arcana zone, the reservoir determines how much energy the totem can hold, and the antenna determines how many talismins can be linked to the totem. When a talisman linked to a totem is activated, it draws a number of spell levels from the totem equal to the spell's level (plus any spell levels needed for metamagic feats). Note: Cantrips, being 0th level, do not deplete any appreciable amount of energy from a totem.</p>
+<p>Totems can be powered outside of a populious arcana zone using elemental crystals as a fule source. This is achieved using a device known as an Orcal Engine built into the Totem's core. It takes a minute to burn one spell level worth of crystal. Each crystal contains a number of spell levels based on its size. The Orcal Engine burns them imeadiently, but stores the energy in the reservor untill it is required. A typical elemental crystal large enough to contain one spell level of power weighs about a quarter pound and typicly costs arround three silver.</p>
 <p>Collectors charge rates are measured in spell levels per hour. <em>Table: Collectors</em> lists their charge rate, cost in GP, and their equivalent spells per day. For balance purposes, a wizard's base spells per day at level 20 is 40, and 4 at first level. Their price has been based on Rings of Wizardry, albeit somewhat discounted to account for mass production.</p>
 <p>Reservoirs store spell levels, with their capacity listed as the total number of spells it can store. <em>Table: Reservoirs</em> lists their price in GP and how many spell levels they can store. For balance purposes, its price is based on Rings of Spell Storing, albeit somewhat discounted to account for mass production.</p>
-<p>The antenna determines how far a totem can transmit power. Table: Antenna lists their price in GP and how far they can transmit power. For balance purposes, these distances are kept short and GMs should be aware that antenne works similarly to radio. Just because a location is theoretically in range doesn't mean that the antenna can transmit power through a quarter mile of stone.</p>
+<p>The antenna determines how far a totem can transmit power. <i>Table: Slots</i> lists their price in GP and how far they can transmit power. For balance purposes, these distances are kept short and GMs should be aware that antenne works similarly to radio. Just because a location is theoretically in range doesn't mean that the antenna can transmit power through a quarter mile of stone.</p>
 <p>Each component's abilities and costs are as follows:</p>
 <div class="row" style="margin-left: 10%;">
 <div class="column">
@@ -252,54 +253,54 @@
 </table>
 </div>
 <div class="column">
-<table style="display: inline-table; border-collapse: collapse; width: 27.2198%; height: 198px;" border="1"><caption style="caption-side: top;"><strong>Table: Antenna</strong></caption>
-<tbody>
-<tr style="height: 18px;">
-<td style="width: 12.4454%; height: 18px; text-align: center;"><strong>Distance</strong></td>
-<td style="width: 14.7744%; height: 18px; text-align: center;"><strong>Cost (GP)</strong></td>
-</tr>
-<tr style="height: 18px;">
-<td style="width: 12.4454%; height: 18px; text-align: center;">Plugin</td>
-<td style="width: 14.7744%; height: 18px; text-align: center;">180</td>
-</tr>
-<tr style="height: 18px;">
-<td style="width: 12.4454%; height: 18px; text-align: center;">60 ft</td>
-<td style="width: 14.7744%; height: 18px; text-align: center;">250</td>
-</tr>
-<tr style="height: 18px;">
-<td style="width: 12.4454%; height: 18px; text-align: center;">120 ft</td>
-<td style="width: 14.7744%; height: 18px; text-align: center;">500</td>
-</tr>
-<tr style="height: 18px;">
-<td style="width: 12.4454%; height: 18px; text-align: center;">200 ft</td>
-<td style="width: 14.7744%; height: 18px; text-align: center;">1,000</td>
-</tr>
-<tr style="height: 18px;">
-<td style="width: 12.4454%; height: 18px; text-align: center;">250 ft</td>
-<td style="width: 14.7744%; height: 18px; text-align: center;">5,000</td>
-</tr>
-<tr style="height: 18px;">
-<td style="width: 12.4454%; height: 18px; text-align: center;">300 ft</td>
-<td style="width: 14.7744%; height: 18px; text-align: center;">10,000</td>
-</tr>
-<tr style="height: 18px;">
-<td style="width: 12.4454%; height: 18px; text-align: center;">500 ft</td>
-<td style="width: 14.7744%; height: 18px; text-align: center;">25,000</td>
-</tr>
-<tr style="height: 18px;">
-<td style="width: 12.4454%; height: 18px; text-align: center;">1 mi</td>
-<td style="width: 14.7744%; height: 18px; text-align: center;">100,000</td>
-</tr>
-<tr style="height: 18px;">
-<td style="width: 12.4454%; height: 18px; text-align: center;">1.5 mi</td>
-<td style="width: 14.7744%; height: 18px; text-align: center;">150000</td>
-</tr>
-<tr style="height: 18px;">
-<td style="width: 12.4454%; height: 18px; text-align: center;">2 mi</td>
-<td style="width: 14.7744%; height: 18px; text-align: center;">250,000</td>
-</tr>
-</tbody>
-</table>
+	<table style="display: inline-table; border-collapse: collapse; width: 27.2198%; height: 198px;" border="1"><caption style="caption-side: top;"><strong>Table: Slots</strong></caption>
+	<tbody>
+	<tr style="height: 18px;">
+	<td style="width: 12.4454%; height: 18px; text-align: center;"><strong>Distance</strong></td>
+	<td style="width: 14.7744%; height: 18px; text-align: center;"><strong>Cost (GP)</strong></td>
+	</tr>
+	<tr style="height: 18px;">
+	<td style="width: 12.4454%; height: 18px; text-align: center;">1</td>
+	<td style="width: 14.7744%; height: 18px; text-align: center;">180</td>
+	</tr>
+	<tr style="height: 18px;">
+	<td style="width: 12.4454%; height: 18px; text-align: center;">3</td>
+	<td style="width: 14.7744%; height: 18px; text-align: center;">250</td>
+	</tr>
+	<tr style="height: 18px;">
+	<td style="width: 12.4454%; height: 18px; text-align: center;">5</td>
+	<td style="width: 14.7744%; height: 18px; text-align: center;">500</td>
+	</tr>
+	<tr style="height: 18px;">
+	<td style="width: 12.4454%; height: 18px; text-align: center;">7</td>
+	<td style="width: 14.7744%; height: 18px; text-align: center;">1,000</td>
+	</tr>
+	<tr style="height: 18px;">
+	<td style="width: 12.4454%; height: 18px; text-align: center;">9</td>
+	<td style="width: 14.7744%; height: 18px; text-align: center;">5,000</td>
+	</tr>
+	<tr style="height: 18px;">
+	<td style="width: 12.4454%; height: 18px; text-align: center;">11</td>
+	<td style="width: 14.7744%; height: 18px; text-align: center;">10,000</td>
+	</tr>
+	<tr style="height: 18px;">
+	<td style="width: 12.4454%; height: 18px; text-align: center;">13</td>
+	<td style="width: 14.7744%; height: 18px; text-align: center;">25,000</td>
+	</tr>
+	<tr style="height: 18px;">
+	<td style="width: 12.4454%; height: 18px; text-align: center;">15</td>
+	<td style="width: 14.7744%; height: 18px; text-align: center;">100,000</td>
+	</tr>
+	<tr style="height: 18px;">
+	<td style="width: 12.4454%; height: 18px; text-align: center;">17</td>
+	<td style="width: 14.7744%; height: 18px; text-align: center;">150000</td>
+	</tr>
+	<tr style="height: 18px;">
+	<td style="width: 12.4454%; height: 18px; text-align: center;">19</td>
+	<td style="width: 14.7744%; height: 18px; text-align: center;">250,000</td>
+	</tr>
+	</tbody>
+	</table>
 </div>
 </div>
 
