--- a/gamerules/shootybangs.html
+++ b/gamerules/shootybangs.html
@@ -100,7 +100,7 @@
 
 <div class="quotebox">
 <ol>
-<li><b>The First Firearms</b> - Gunpowder and firearms are brand new. The most advanced firearm is a tiny cannon mounted to a stick (sometimes as part of a polearm) which one fires by 
+<li><b>The First Firearms</b> - Gunpowder and firearms are brand new. The most advanced firearm is a tiny cannon mounted to a stick (sometimes as part of a polearm) which one fires by
 touching a match to a hole at the base. Larger cannons exist as well but are generally employed as siege weapons rather than field artillery. This era is representative of the early 1400s.
 </li>
 <li><b>Medieval Firearms</b> - This is the era of matchlock guns and their more expensive cousins, the wheellocks. Firearms are less crude and finally have triggers, though they are still somewhat unreliable. This era is representative of the 1450s to the 1550s.</li>
@@ -1609,8 +1609,8 @@ The feat Rapid Reload will reduce the reload time by one step as per normal, and
 <b>Elven Sight</b> +2 to attack rolls made against targets obscured by foliage.</br>
 <b>Dwarven “Sight” <i>(actually a bayonet)</i></b> +2 melee attack damage.</br>
 
-    <b>Improved sights</b> +1 attack bonus (stacks with sights)</br>
-       <b>Advanced sights</b> +1 attack bonus stacks with Improved sights.</br>
+    <b>Improved sights</b> +2 attack bonus (replaces sights)</br>
+       <b>Advanced sights</b> +3 attack bonus (replaces sights).</br>
 <b>Banded Barrel</b> Prevents the first misfire effect during a combat.</br>
 <b>Reinforced Banded Barrel</b> Can be packed with a load more powerful than normal, allowing the weapon to use ammo that would grant 1 attack die over the barrel’s maximum. Prevents the first misfire effect during combat.</br>
 <b>Silencer</b> - Doubles DC of perception checks to hear weapons being fired. Removes stealth penalty of firearms use if combined with certain ammunition.</br>
