--- a/misc/chargen.html
+++ b/misc/chargen.html
@@ -47,9 +47,9 @@
 <h3 class="articletitle">Eyom Caracter Generator</h3>
 <button type="button" class="collapsible">Instructions</button>
 <div class="content">
-<p>This page contains an advanced name generator. Select your desired given and family name types with the dropdowns, this will make buttons appear which will allow you to generate names, changing each part independently. If you generate a nickname, it persists through other generations, even from groups that do not use nicknames. You will have to refresh the page to clear nicknames.</p>
-<p>Once you have generated a name you like you can select their species using the species dropdown menu. Once a species is selected and a name exists, you can press the "describe them" button to get a basic physical discripotion of the caracter which is accurate to their species. You can then press the other description buttons if you so desire.</p>
-<p>The scratch pad at the bottem of the page stores text localy on your device via a cookie, and will persist through closing the tabs, opening and closing the browser, and even system reboots. You should, howeaver, backup anything stored there as your device may clear cookies automaticaly. To clear the text yourself you can either select all of the text and delete it, or clear this site's cookie.</p>
+  <p>This page contains an advanced name generator. Select your desired given and family name types with the dropdowns, this will make buttons appear which will allow you to generate names, changing each part independently. If you generate a nickname, it persists through other generations, even from groups that do not use nicknames. You will have to refresh the page to clear nicknames.</p>
+  <p>Once you have generated a name you like you can select their species using the species dropdown menu. Once a species is selected and a name exists, you can press the "describe them" button to get a basic physical discripotion of the caracter which is accurate to their species. You can then press the other description buttons if you so desire.</p>
+  <p>The scratch pad at the bottem of the page stores text localy on your device via a cookie, and will persist through closing the tabs, opening and closing the browser, and even system reboots. You should, howeaver, backup anything stored there as your device may clear cookies automaticaly. To clear the text yourself you can either select all of the text and delete it, or clear this site's cookie.</p>
 </div>
 
 
@@ -583,7 +583,7 @@
   var text = '';
 
   // Get the contents of the fields
-  var name = document.getElementById('gendname').innerText + document.getElementById('lastname').innerText;
+  var name = document.getElementById('gendname').innerText;
   var demo4 = document.getElementById('demo4').innerText;
   var demo5 = document.getElementById('demo5').innerText;
   var demo6 = document.getElementById('demo6').innerText;
