--- a/misc/miscindex.html
+++ b/misc/miscindex.html
@@ -20,6 +20,9 @@
 <h4 class="articlesubtitle"><a target="_blank" rel="noopener noreferrer" href="aethary.html">The Aethary</a></h4>
 <p>A detailed account of Eyom's unique communications system, which is capable of conveying text, images, sound, illusions, scryings, and can even be visited through the Aetheric Projection spell.</p>
 
+<h4 class="articlesubtitle"><a target="_blank" rel="noopener noreferrer" href="afterlife.html">The Afterlife</a></h4>
+<p>A short explenation of Eyom's so called "revolving door" of mortality.</p>
+
 <h4 class="articlesubtitle"><a target="_blank" rel="noopener noreferrer"  href="beastbloodcurse.html">The Beast Blood Curse</a></h4>
 <p>A detailed look into a blood curse placed on Eyom's humans in the very early of civilization.</p>
 
@@ -38,6 +41,9 @@
 <h4 class="articlesubtitle"><a target="_blank" rel="noopener noreferrer"  href="GenusIniuriam.html">The Genus Iniuriam Curse</a></h4>
 <p>A blood curse effecting humans within Eyom. The curse decouples primary and secondary sexual traits, effectively turning sex from a binary to a gradient, much like gender.</p>
 
+<h4 class="articlesubtitle"><a target="_blank" rel="noopener noreferrer"  href="irus.html">Irus, Lord of Malice</a></h4>
+<p>An article on the divine generaly blamed for all of Eyom's ills and suffering.</p>
+
 <h4 class="articlesubtitle"><a target="_blank" rel="noopener noreferrer"  href="legendarymonsters.html">Legendary Monsters</a></h4>
 <p>Eyom is home to a small number of rare and exceptionally powerful monsters. While dangerous, some are helpful, others are harmful. Strangely, most people's lives are uneffected by these god-like creatures.</p>
 
@@ -52,6 +58,9 @@
 
 <h4 class="articlesubtitle"><a target="_blank" rel="noopener noreferrer"  href="theplanes.html">The Planes</a></h4>
 <p>Information pertaining to the other planes of existence. Presented here for those in Eyom who may not know what happened to the rest of reality.</p>
+
+<h4 class="articlesubtitle"><a target="_blank" rel="noopener noreferrer"  href="statereligion.html">State Religions</a></h4>
+<p>Short overviews of Eyom's State Religions.</p>
 
 <h4 class="articlesubtitle"><a target="_blank" rel="noopener noreferrer"  href="TransEyomicRailway.html">The Trans-Eyomic Railway</a></h4>
 <p>An article on Eyom's continent spanning railway network, and the frankly insane engines and trains they make use of.</p>
