--- a/projects/WCSpace/home.html
+++ b/projects/WCSpace/home.html
@@ -23,6 +23,9 @@
       <div data-augmented-ui="tl-clip tr-clip-x r-clip-y br-clip border" class="styleme article">
         <div class="readingarea">
           <h3 id="articleTitle"></h3>
+          <h4>Welcome, humans</h4>
+          <p>Hello. This website is a glimpse into the wider world arround your planet. It is far from complete as it is maintained by a small staff of volenteers and must be frequently moved from server to server due to the actions of your governments. There are many sites like this one, and you have every right to be skeptical. Howeaver, one day, sooner than you think, your species will accend to the stars and on that day you will find us waiting for you as friends and neighbors.</p>
+          <p>Feel free to explore this site to your heart's content. If you believe what you see and would like to see the stars yourself (and are okay with not being allowed back home untill official and public contact between our peoples occures) you can check out our <a href="articles\HithikersProgram.html">Hithiker's Program</a>, which attempts to unite cuierious humans with people looking to meet humans for various reasons (Typicaly friendship, but occasionaly more).</p>
 
           <section id="news-section">
             <h2>Trending News</h2>
@@ -98,7 +101,7 @@
             "Legendary historian Uris Thakiwa's latest book 'Whatever happened to the WC Sector?' detailing the fall of the once prosperious trade route is now avalible.",
             "A rare and dangerous form of cosmic radiation has been detected in the vicinity of Zemitas Prime, posing a threat to nearby spacecraft.",
             "A new species of intelligent life has been discovered on Amchil II, prompting excitement and caution among xenobiologists.",
-            "A colossal space habitat, housing millions of inhabitants in a rotating ring structure, has been completed in the orbit of Ceurdan."            
+            "A colossal space habitat, housing millions of inhabitants in a rotating ring structure, has been completed in the orbit of Ceurdan."
         ];
 
         function displayRandomStory() {
