--- a/religions/index.html
+++ b/religions/index.html
@@ -186,6 +186,17 @@
       <td class="centered">Y</td>
       <td class="centered"><a href="http://www.d20pfsrd.com/classes/base-classes/alchemist/">Alchemist</a></td>
     </tr>
+    <tr>
+      <td class="centered"><a href="illia.html">Illia</a></td>
+      <td class="centered">S</td>
+      <td class="centered">CN</td>
+      <td><a href="LifeDomain.html">Life</a>, <a href="https://www.d20pfsrd.com/classes/core-classes/cleric/domains/paizo-domains/luck-domain/">Luck</a> (<a href="https://www.d20pfsrd.com/classes/core-classes/cleric/domains/paizo-domains/luck-domain/curse/">Curse</a>), <a href="https://www.d20pfsrd.com/classes/core-classes/cleric/domains/paizo-domains/trickery-domain/">Trickery</a> (<a href="https://www.d20pfsrd.com/classes/core-classes/cleric/domains/paizo-domains/trickery-domain/deception/">Deception</a>), <a href="https://www.d20pfsrd.com/classes/core-classes/cleric/domains/paizo-domains/law-domain/">Law</a> (<a href="https://www.d20pfsrd.com/classes/core-classes/cleric/domains/paizo-domains/law-domain/tyranny/">Tyranny</a>), <a href="https://www.d20pfsrd.com/classes/core-classes/cleric/domains/paizo-domains/chaos-domain/">Chaos</a> (<a href="https://www.d20pfsrd.com/classes/core-classes/cleric/domains/paizo-domains/chaos-domain/whimsy/">Whimsy</a>)</td>
+      <td>The Sundered Vaults</td>
+      <td class="centered"><a href="https://www.d20pfsrd.com/classes/core-classes/cleric/">Cleric</a></td>
+      <td class="centered">Y</td>
+      <td class="centered">N</td>
+      <td class="centered">Wizard</td>
+    </tr>
   </tbody>
 </table>
 
