humans and Earth

--- a/projects/MRU/WillowCreekCA.html
+++ b/projects/MRU/WillowCreekCA.html
@@ -14,7 +14,7 @@
           <bigtext class="whiteoutlinebig">DoA</bigtext>
           <br>
           <midtext class="whiteoutlinebig">Central Database</midtext>
-          <h2 class="whiteoutlinesmall">Authorization Key Required</h2>
+          <h2 class="whiteoutlinesmall">Earth-based Connection Detected</h2>
           <div class="input-container">
               <input type="password" id="auth-input" value="" readonly>
               <div class="censored-dots" id="censored-dots"></div>
